# match-download

./: .gitignore  GITHUB_ACTIONS_PERMISSIONS.md  GITHUB_ACTIONS_使用说明.md  Process权限问题修复.md  README.md  UI优化说明.md  build_arm64.sh  gen_key.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  release.sh  show-signing-keys.sh  upload_updater_pkg.sh  快速开始.md  签名密钥配置.md
.github/workflows/: build.yml
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  downloader.rs  lib.rs  main.rs  wlzj3.0-php.code-workspace
src/components/: Dashboard.vue  DownloadPanel.vue  Login.vue
